--- a/app/src/main/res/layout/button_collections.xml
+++ b/app/src/main/res/layout/button_collections.xml
@@ -4,13 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FavoritesFragment"
     android:id="@+id/home_fragment_root"
     android:visibility="visible"
-    android:background="@drawable/shape_f">
+    android:background="@drawable/shape_b">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/favorites_recycler"
+        android:id="@+id/selections"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
